# Blindfold

./: .env.example  .gitignore  .gitleaks.toml  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CHATBOT.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  INTEGRATION-AURORA.md  KNOWLEDGE.md  README.md  ROADMAP.md  SECURITY.md  TEAMS.md  current_status.md  engineer_report.md  explain.md  integration-stack.md  output_analysis.md  package-lock.json  package.json  process.md  system_design.md  tsconfig.json  usage.md  usage_by_claude.md  vercel.json  version0.2.md  vicky.md  work_remaining.md
.githooks/: pre-commit
contract/: Cargo.toml
contract/auth-tests/: Cargo.toml
contract/auth-tests/src/: lib.rs
contract/src/: auth.rs  forward.rs  lib.rs
contract/wit/: world.wit
demo/: discord-webhook.md  github-real-run.md  package.json  run-demo.ts
docs/: 01-problem-analysis.md  02-terminal3-analysis.md  03-architecture.md  04-usage.md  05-compatibility.md  AGENTS.md  index.html
examples/: README.md  grok-via-blindfold.ts
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: build-contract.sh  demo-smtp.ts  diagnose-execute.ts  env-fingerprint.sh  grant-and-call.ts  grant-egress.ts  grant-secrets-read.ts  init-tenant.ts  one-time-setup.sh  probe-egress-map.ts  probe-funcs.ts  probe-map-get.ts  real-e2e-test.ts  real-fullcall.ts  run-tests.ts  seal-blogger-key.ts  seal-via-working-key.ts  smtp-with-blindfold.ts  sync-skill.sh  test-enclave-egress.ts  test-providers.ts  test-v5-release.ts  (+1 more)
(+51 files in other folders)
